--- a/html/web_basics/index.html
+++ b/html/web_basics/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Your Title Here</title>
+		<title> Cats </title>
 	</head>
 	<body>
-		<h1>Hello world</h1>
-		Your Content Here
+		<h1>Cats are cool!</h1>
+		<strong>Cats are furry and fluffy :3</strong>
+		<p>Not only that, but they are <em>super </em>cuddly</p>
+		<h2>Colors of cats: </h2>
+		<ul>
+			<li>White</li>
+			<li>Black</li>
+			<li>Grey</li>
+		</ul>
+		<h2>Favorite cat names: </h2>
+		<ol>
+			<li>Tom</li>
+			<li>Bob</li>
+			<li>Lucy</li>
+		</ol>
+		<p>Click <a href = "http://www.google.com">here</a> to google more about cats.
 	</body>
 </html>
